--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,22 +11,8 @@
 Welcome, <%=current_user.email%>
 <%end%>
 	<%= link_to "Sign up", new_user_path %>
+  <%= link_to "Sign in", new_session_path %>
 
-<%= form_for :session, url: sessions_path do |f| %>
-  <p>
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </p>
- 
-  <p>
-    <%= f.label :password %><br>
-    <%= f.text_area :password %>
-  </p>
-
-  <p>
-    <%= f.submit "Sign in" %>
-  </p>
-<% end %>
   <%= yield %>
 
 </body>
